# ddasm

./: .gitignore  Makefile  README.md  allocator.d  argparse.d  barray.d  bettercobject.d  bmp.d  c.c  c2dasm.d  cpp.d  dasm_parser.d  dasm_token.d  dasm_tokenizer.d  ddasm.d  ds2dasm.d  dscript_to_dasm.d  dub.json  dvm_args.d  dvm_defs.d  dvm_instructions.d  dvm_linked.d  dvm_linker.d  dvm_machine.d  dvm_regs.d  dvm_unlinked.d  file_util.d  fpconv_ctfe.d  get_input.d  meson.build  parse_numbers.d  str_util.d  stringbuilder.d  zstring.d
Samples/: add.c  bench.c  bench.dasm  bench.ds  binops.c  binops.dasm  binops.ds  cat.dasm  cat.ds  cmp.dasm  copy-func.dasm  countof.c  cp.ds  dynamic.dasm  env.c  factorial.dasm  factorial.ds  fib.ds  file.dasm  fizzbuzz.dasm  fizzbuzz.ds  foo.dasm  func.ds  goto.ds  hackerman.dasm  halt.ds  hello.c  hello.dasm  hello.ds  imports.dasm  inline_dasm.ds  jump.dasm  loops.ds  oop.dasm  python.c  python.ds  sdl.dasm  snek.c  snek.ds  snek_manual.c  (+2 more)
Tests/: abort.c  call.c  complex.c  complex_decl.c  compound.c  constexpr.c  countof.c  decl_array.c  decl_basic.c  decl_complex.c  decl_function.c  decl_multiple.c  decl_pointer.c  decl_storage.c  decl_typedef.c  draw_rect.c  expr_assignment.c  expr_binary.c  expr_cast.c  expr_comma.c  expr_postfix.c  expr_primary.c  expr_ternary.c  expr_unary.c  ext_auto.c  ext_func_literal.c  ext_inner_func.c  ext_pp_elseif_typo.c  ext_static_if.c  ext_struct_idx.c  ext_ufcs.c  ext_unpack.c  field_assign.c  float16.c  float_basic.c  float_params.c  float_return.c  forward.c  func.c  func_ptr.c  (+257 more)
cfront/: c_ast.d  (+10 more)
(+76 files in other folders)
